[tool]
[tool.poetry]
authors = ["DozNaka <dozdguide@gmail.com>"]
description = ""
name = "MCReaper"
version = "0.4"
[tool.poetry.dependencies]
Flask = "^2.0.2"
"discord.py" = "^1.7.3"
dnspython = "^2.1.0"
google = "^3.0.0"
"nekos.py" = "^1.0.3"
pyfiglet = "^0.8.post1"
pymongo = "^3.12.1"
python = "^3.8"
requests = "^2.26.0"
waitress = "^2.0.0"
we-get = "^1.0.1"
